--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,24 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   profiles:
     active: native
   cloud:
     config:
       server:
         native:
-          search-locations: file://C:\Users\YJS\IdeaProjects\spring-cloud\native-file-repo
+          search-locations: file:///Users/yjs/Documents/GitHub/spring-cloud-study/native-file-repo
         git:
 #          uri: file://C:\Users\YJS\IdeaProjects\spring-cloud\git-local-repo
           uri: https://github.com/jungsikyeo/spring-cloud-config
+
+manager:
+  endpoint:
+    web:
+      exposure:
+        include: health, busrefresh
